Sidebar fix cropped checkbutton label
In some languages (de) some labels were being shifted and ultimately
cropped due to their length. Example: Using German; selecting an image
-> the 'Seitenverhältnis beibehalten' was being cropped

Remove padding for those labels when on the sidebar

--- a/browser/css/jssidebar.css
+++ b/browser/css/jssidebar.css
@@ -210,6 +210,10 @@ div.sidebar.ui-grid .checkbutton.sidebar,
 	font-size: var(--default-font-size);
 }
 
+.sidebar.jsdialog.checkbutton label {
+	padding: 0;
+}
+
 /* writer */
 
 #PosSizePropertyPanel.sidebar #selectrotationtype,
